fix several bugs. Still have 2 to 5 failed tests per purpose

--- a/tests/lustre_fs/cfg/Alert_Dircount.conf
+++ b/tests/lustre_fs/cfg/Alert_Dircount.conf
@@ -9,6 +9,6 @@
 
 EntryProcessor
 {
-	Alert Alert_Dircount { type == "directory" and dircount > 1 }
+	Alert Alert_Dircount { type == directory and dircount > 1 }
 }
 
