--- a/tests/lustre_fs/cfg/MigrationClass_Path_Name.conf
+++ b/tests/lustre_fs/cfg/MigrationClass_Path_Name.conf
@@ -6,7 +6,7 @@ Filesets
     {
         definition
         {
-            fullpath == "$ROOT_DIR/dir2/*"
+            path == "/mnt/lustre/dir2/*"
         }
     }
 }
