--- a/tests/lustre_fs/cfg/MigrationStd_Path_Name.conf
+++ b/tests/lustre_fs/cfg/MigrationStd_Path_Name.conf
@@ -6,7 +6,7 @@ migration_policies
 	{
 		condition
         {
-            fullpath == "/mnt/lustre/dir2/*"
+            path == "/mnt/lustre/dir2/*"
         }
     }
 }
