--- a/tests/lustre_fs/cfg/OtherParameters_1.conf
+++ b/tests/lustre_fs/cfg/OtherParameters_1.conf
@@ -120,7 +120,7 @@ migration_policies
     {
         condition
         {
-            last_access <= 10sec
+            last_mod >= 0sec
         }
     }
 }
