--- a/tests/lustre_fs/cfg/PurgeClass_Path_Name.conf
+++ b/tests/lustre_fs/cfg/PurgeClass_Path_Name.conf
@@ -6,7 +6,7 @@ Filesets
     { 
         Definition
         {
-            fullpath == "$ROOT_DIR/dir1/*"
+            path == "/mnt/lustre/dir1/*"
             and
             owner == "root"
         }
@@ -15,7 +15,7 @@ Filesets
 
 purge_policies
 {
-    Policy default
+    Policy purge_path
     {
         target_fileclass = test_purge_path;
         condition
@@ -24,6 +24,11 @@ purge_policies
             and
             name == "file.1"
         }
+    }
+    
+    policy default
+    {
+       condition { last_mod > 1h }
     }
 }
 
@@ -52,11 +57,5 @@ purge_trigger
     high_threshold_pct = 0%;
     low_threshold_pct  = 0%;
     check_interval     = 5min;
-}
-
-hsm_remove_policy
-{
-    #remove files 1 week after they have been removed from Lustre
-    deferred_remove_delay = 1w;
 }
 
