--- a/tests/lustre_fs/cfg/PurgeStd_Path_Name.conf
+++ b/tests/lustre_fs/cfg/PurgeStd_Path_Name.conf
@@ -6,7 +6,7 @@ purge_policies
 	{
 		condition
         {
-            fullpath == "/mnt/lustre/dir2/*"
+            path == "/mnt/lustre/dir2/*"
         }
     }
 }
@@ -36,11 +36,5 @@ purge_trigger
     high_threshold_pct = 0%;
     low_threshold_pct  = 0%;
     check_interval     = 5min;
-}
-
-hsm_remove_policy
-{
-    #remove files 1 week after they have been removed from Lustre
-    deferred_remove_delay = 1w;
 }
 
