--- a/tests/posix_fs/cfg/OtherParameters_1.conf
+++ b/tests/posix_fs/cfg/OtherParameters_1.conf
@@ -13,6 +13,22 @@ General
 	fs_type = ext3;
 }
 
+ChangeLog
+{
+    # 1 MDT block for each MDT :
+    MDT
+    {
+        # name of the first MDT
+        mdt_name  = "MDT0000" ;
+
+        # id of the persistent changelog reader
+        # as returned by "lctl changelog_register" command
+        reader_id = "cl1" ;
+    }
+    force_polling = TRUE;
+    polling_interval = 1s;
+}
+
 Log
 {
     # Log verbosity level
@@ -36,7 +52,7 @@ ListManager
 	{
 		server = "localhost";
 		db = "robinhood_test";
-		user = "robinhood";
+        user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
         innodb = enabled;
@@ -53,14 +69,6 @@ Backend
 {
 	opt_string = "root=/tmp/backend";
 }
-
-
-
-
-
-
-
-
 
 
 Filesets
@@ -96,7 +104,7 @@ migration_policies
     {
         condition
         {
-            last_access <= 10sec
+            last_mod >= 0sec
         }
     }
 }
