--- a/tests/posix_fs/cfg/OtherParameters_5.conf
+++ b/tests/posix_fs/cfg/OtherParameters_5.conf
@@ -3,26 +3,8 @@
 
 General
 {
-	fs_path = /mnt/lustre;
-	fs_type = lustre;
-}
-
-# ChangeLog Reader configuration
-# Parameters for processing MDT changelogs :
-ChangeLog
-{
-    # 1 MDT block for each MDT :
-    MDT
-    {
-        # name of the first MDT
-        mdt_name  = "MDT0000" ;
-
-        # id of the persistent changelog reader
-        # as returned by "lctl changelog_register" command
-        reader_id = "cl1" ;
-    }
-    force_polling = TRUE;
-    polling_interval = 1s;
+	fs_path = "/tmp/mnt.rbh";
+	fs_type = ext3;
 }
 
 Log
@@ -38,7 +20,7 @@ Log
     report_file = "/dev/null";
 
     # set alert_file, alert_mail or both depending on the alert method you wish
-    alert_file = "/home/CentOS6/Bureau/Sources/tests/lustre_fs/rh_alert.log";
+    alert_file = "/home/CentOS6/Bureau/Sources/tests/posix_fs/rh_alert.log";
 
 }
 
@@ -47,31 +29,16 @@ ListManager
 	MySQL
 	{
 		server = "localhost";
-		db = "robinhood_lustre";
+		db = "robinhood_test";
         user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
         innodb = enabled;
 	}
-
-	SQLite {
-	        db_file = "/tmp/robinhood_sqlite_db" ;
-        	retry_delay_microsec = 1000 ;
-	}
-}
-
-# for tests with backup purpose
-backend
-{
-    root = "/tmp/backend";
-    mnt_type=ext4;
-    check_mounted = FALSE;
-    action_cmd = "../../scripts/rbhext_tool";
 }
 
 FS_Scan
 {
-    Ignore { path == "/mnt/lustre/.lustre" }
     min_scan_interval = 10sec;
     max_scan_interval = 50sec;
 }
@@ -81,5 +48,5 @@ purge_trigger
     trigger_on = global_usage;
     high_watermark_pct = 100%;
     low_watermark_pct = 99%;
-    check_interval = 10sec;
+    check_interval = 5sec;
 }
