--- a/tests/lustre_fs/cfg/RemovingEmptyDir.conf
+++ b/tests/lustre_fs/cfg/RemovingEmptyDir.conf
@@ -9,8 +9,6 @@
 
 Rmdir_Policy
 {
-    recursive_rmdir
-    {
-        age_rm_empty_dirs > 30sec
-    }
-}                        
+    age_rm_empty_dirs = 30sec;
+}
+
