--- a/tests/posix_fs/cfg/Alert_Dircount.conf
+++ b/tests/posix_fs/cfg/Alert_Dircount.conf
@@ -9,6 +9,6 @@
 
 EntryProcessor
 {
-	Alert Alert_Dircount { type == "directory" and dircount > 1 }
+	Alert Alert_Dircount { type == directory and dircount > 1 }
 }
 
