--- a/tests/posix_fs/cfg/PurgeClass_Path_Name.conf
+++ b/tests/posix_fs/cfg/PurgeClass_Path_Name.conf
@@ -6,7 +6,7 @@ Filesets
     { 
         Definition
         {
-            fullpath == "$ROOT_DIR/dir1/*"
+            path == "/tmp/mnt.rbh/dir1/*"
             and
             owner == "root"
         }
@@ -15,7 +15,7 @@ Filesets
 
 purge_policies
 {
-    Policy default
+    Policy purge_path
     {
         target_fileclass = test_purge_path;
         condition
@@ -25,6 +25,12 @@ purge_policies
             name == "file.1"
         }
     }
+
+    policy default 
+    {
+        condition { last_mod > 1h }
+    }
+
 }
 
 migration_policies
@@ -52,11 +58,5 @@ purge_trigger
     high_threshold_pct = 0%;
     low_threshold_pct  = 0%;
     check_interval     = 5min;
-}
-
-hsm_remove_policy
-{
-    #remove files 1 week after they have been removed from Lustre
-    deferred_remove_delay = 1w;
 }
 
