- Fix bug with last access removing dir test - change alert log directory

--- a/tests/lustre_fs/cfg/OtherParameters_5.conf
+++ b/tests/lustre_fs/cfg/OtherParameters_5.conf
@@ -38,7 +38,7 @@ Log
     report_file = "/dev/null";
 
     # set alert_file, alert_mail or both depending on the alert method you wish
-    alert_file = "/home/CentOS6/Bureau/Sources/tests/lustre_fs/rh_alert.log";
+    alert_file = "/dev/null";
 
 }
 
