Added chglog msg

--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -295,6 +295,10 @@ fi
 
 %changelog
 
+* Tue May 23 2012 Thomas Leibovici <thomas.leibovici@cea.fr> 2.3.3.6
+- faster and safer shutdown
+- better block counting for purges
+
 * Tue May 15 2012 Thomas Leibovici <thomas.leibovici@cea.fr> 2.3.3.4
 - shook: * entry state set to 'archive_running' during migration
          * recovery for entries with 'release pending' state on startup
