Fixing sogeti tests

--- a/tests/lustre_fs/cfg/Generation_Report_1.conf
+++ b/tests/lustre_fs/cfg/Generation_Report_1.conf
@@ -42,3 +42,18 @@ Purge_policies
     }
 }                                
 
+Migration_policies
+{
+    Policy test-generation-report-migr
+    {
+        target_fileclass = test_file_type;
+	    target_fileclass = test_link_type;
+	    condition {  last_mod >= 0 }
+    }
+    
+    policy default
+    {
+	    condition {  last_mod >= 1h }
+    }
+}                                
+
