--- a/tests/posix_fs/cfg/OtherParameters_5.conf
+++ b/tests/posix_fs/cfg/OtherParameters_5.conf
@@ -20,7 +20,7 @@ Log
     report_file = "/dev/null";
 
     # set alert_file, alert_mail or both depending on the alert method you wish
-    alert_file = "/home/CentOS6/Bureau/Sources/tests/posix_fs/rh_alert.log";
+    alert_file = "/tmp/rh_alert.log";
 
 }
 
