--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -40,6 +40,8 @@ BuildRequires: mysql-devel >= 4.1    \
 # target install dir for web gui
 %define installdir_www  /var/www/html
 
+%{!?lustre_path: %define lustre_path / }
+
 ###### end of macro definitions #####
 
 Name: @PACKAGE@
@@ -89,6 +91,11 @@ This uses robinhood database to display misc. user and group stats.
 #summary, description and dependencies of each purpose
 %if %{with hsm}
 
+%define configure_purpose LUSTRE_HSM
+%define purpose hsm
+%define purpose_svc robinhood-hsm
+%define purpose_bin rbh-hsm
+
 %package %{purpose}
 Summary: PolicyEngine for Lustre-HSM binding
 Group: Applications/System
@@ -100,6 +107,11 @@ Monitor Lustre usage and trigger file migration and purges.
 Generated using options: @ac_configure_args@
 %else
 %if %{with sherpa}
+
+%define configure_purpose SHERPA
+%define purpose sherpa
+%define purpose_svc robinhood-sherpa
+%define purpose_bin rbh-sherpa
 
 %package %{purpose}
 Summary: PolicyEngine for SHERPA cache manager
@@ -119,6 +131,11 @@ Generated using options: @ac_configure_args@
 # backup mode
 %if %{with backup}
 
+%define configure_purpose BACKUP
+%define purpose backup
+%define purpose_svc robinhood-backup
+%define purpose_bin rbh-backup
+
 %package %{purpose}
 Summary: PolicyEngine for filesystem backup to external storage
 Group: Applications/System
@@ -131,6 +148,11 @@ Generated using options: @ac_configure_args@
 %else
 # light HSM binding mode (using shook library)
 %if %{with shook}
+
+%define configure_purpose SHOOK
+%define purpose shook
+%define purpose_svc robinhood-shook
+%define purpose_bin rbh-shook
 
 %package %{purpose}
 Summary: PolicyEngine for simple HSM binding
@@ -146,6 +168,11 @@ Generated using options: @ac_configure_args@
 %else
 
 # TMP FS MGR
+
+%define configure_purpose TMP_FS_MGR
+%define purpose tmpfs
+%define purpose_svc robinhood
+%define purpose_bin robinhood
 
 %package %{purpose}
 Summary: Accounting, reporting and purge tool for large filesystems
@@ -168,7 +195,9 @@ Generated using options: @ac_configure_args@
 %setup -q -n @PACKAGE@-%{version}
 
 %build
-./configure @ac_configure_args@ %{?configure_flags:configure_flags} \
+./configure %{?configure_flags:configure_flags} \
+       CPPFLAGS=-I%{lustre_path}/usr/include/ LDFLAGS=-L%{lustre_path}/usr/lib64/ \
+        --with-purpose=%{configure_purpose} \
         --sysconfdir=%{_sysconfdir} \
         --mandir=%{_mandir} \
         --libdir=%{_libdir} \
@@ -179,33 +208,33 @@ make
 rm -rf $RPM_BUILD_ROOT
 mkdir -p $RPM_BUILD_ROOT
 make install DESTDIR=$RPM_BUILD_ROOT
-mkdir -p $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates
-mkdir -p $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/includes
+mkdir -p $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/%{purpose}/templates
+mkdir -p $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/%{purpose}/includes
 mkdir -p $RPM_BUILD_ROOT/%{_initrddir}
 
 %if %{with hsm}
-install -m 644 doc/templates/hsm_policy_basic.conf $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates
-install -m 644 doc/templates/hsm_policy_detailed.conf $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates
+install -m 644 doc/templates/hsm_policy_basic.conf $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/%{purpose}/templates
+install -m 644 doc/templates/hsm_policy_detailed.conf $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/%{purpose}/templates
 %else
 %if %{with backup}
-install -m 644 doc/templates/hsmlite_basic.conf $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates/backup_basic.conf
-install -m 644 doc/templates/hsmlite_detailed.conf $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates/backup_detailed.conf
+install -m 644 doc/templates/hsmlite_basic.conf $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/%{purpose}/templates/backup_basic.conf
+install -m 644 doc/templates/hsmlite_detailed.conf $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/%{purpose}/templates/backup_detailed.conf
 %else
 %if %{with shook}
-install -m 644 doc/templates/hsmlite_basic.conf $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates/shook_basic.conf
-install -m 644 doc/templates/hsmlite_detailed.conf $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates/shook_detailed.conf
+install -m 644 doc/templates/hsmlite_basic.conf $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/%{purpose}/templates/shook_basic.conf
+install -m 644 doc/templates/hsmlite_detailed.conf $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/%{purpose}/templates/shook_detailed.conf
 %else
 # tmp fs mgr
-install -m 644 doc/templates/tmp_fs_mgr_basic.conf  $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates
-install -m 644 doc/templates/tmp_fs_mgr_detailed.conf $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates
+install -m 644 doc/templates/tmp_fs_mgr_basic.conf  $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/%{purpose}/templates
+install -m 644 doc/templates/tmp_fs_mgr_detailed.conf $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/%{purpose}/templates
 %endif
 %endif
 %endif
 
 %if %{defined suse_version}
-install -m 755 scripts/robinhood.init.sles $RPM_BUILD_ROOT/%{_initrddir}/@PURPOSE_SVC@
+install -m 755 scripts/robinhood.init.sles $RPM_BUILD_ROOT/%{_initrddir}/%{purpose_svc}
 %else
-install -m 755 scripts/robinhood.init $RPM_BUILD_ROOT/%{_initrddir}/@PURPOSE_SVC@
+install -m 755 scripts/robinhood.init $RPM_BUILD_ROOT/%{_initrddir}/%{purpose_svc}
 %endif
 
 mkdir $RPM_BUILD_ROOT/%{_sysconfdir}/sysconfig
@@ -219,24 +248,24 @@ cp    web_gui/acct/.htaccess	$RPM_BUILD_ROOT/%{installdir_www}/robinhood/.
 rm -rf $RPM_BUILD_ROOT
 
 %post %{purpose}
-if [ -x %{_initrddir}/@PURPOSE_SVC@ ]; then
-  if %{_initrddir}/@PURPOSE_SVC@ status | grep running | grep -v "not running"  >/dev/null 2>&1; then
-    %{_initrddir}/@PURPOSE_SVC@ stop
+if [ -x %{_initrddir}/%{purpose_svc} ]; then
+  if %{_initrddir}/%{purpose_svc} status | grep running | grep -v "not running"  >/dev/null 2>&1; then
+    %{_initrddir}/%{purpose_svc} stop
     WASRUNNING=1
   fi
-  [ -x /sbin/chkconfig ] && /sbin/chkconfig --del @PURPOSE_SVC@
-  [ -x /sbin/chkconfig ] && /sbin/chkconfig --add @PURPOSE_SVC@
+  [ -x /sbin/chkconfig ] && /sbin/chkconfig --del %{purpose_svc}
+  [ -x /sbin/chkconfig ] && /sbin/chkconfig --add %{purpose_svc}
   if test x$WASRUNNING = x1; then
-    %{_initrddir}/@PURPOSE_SVC@ start
+    %{_initrddir}/%{purpose_svc} start
   fi
 fi
 
 %preun
 if [ "$1" = 0 ]; then
-  if [ -x %{_initrddir}/@PURPOSE_SVC@ ]; then
-     [ -x /sbin/chkconfig ] && /sbin/chkconfig --del @PURPOSE_SVC@
-    if %{_initrddir}/@PURPOSE_SVC@ status | grep running | grep -v "not running" >/dev/null 2>&1; then
-      %{_initrddir}/@PURPOSE_SVC@ stop
+  if [ -x %{_initrddir}/%{purpose_svc} ]; then
+     [ -x /sbin/chkconfig ] && /sbin/chkconfig --del %{purpose_svc}
+    if %{_initrddir}/%{purpose_svc} status | grep running | grep -v "not running" >/dev/null 2>&1; then
+      %{_initrddir}/%{purpose_svc} stop
     fi
   fi
 fi
@@ -254,7 +283,7 @@ fi
 #%doc ChangeLog
 
 %{_sbindir}/rbh-config
-%{_sbindir}/@PURPOSE_BIN@*
+%{_sbindir}/%{purpose_bin}*
 %{_sbindir}/*-report
 %if %{with backup}
 %{_sbindir}/rbhext_*
@@ -266,32 +295,32 @@ fi
 #%{_mandir}/man5/*
 #%{_mandir}/man8/*
 
-%config(noreplace) %{_sysconfdir}/sysconfig/@PURPOSE_SVC@
+%config(noreplace) %{_sysconfdir}/sysconfig/%{purpose_svc}
 
 %dir %{_sysconfdir}/robinhood.d
-%dir %{_sysconfdir}/robinhood.d/@PURPOSE_EXT@
-%dir %{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/includes
-%dir %{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates
+%dir %{_sysconfdir}/robinhood.d/%{purpose}
+%dir %{_sysconfdir}/robinhood.d/%{purpose}/includes
+%dir %{_sysconfdir}/robinhood.d/%{purpose}/templates
 
 %if %{with hsm}
-%config %{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates/hsm_policy_basic.conf
-%config %{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates/hsm_policy_detailed.conf
+%config %{_sysconfdir}/robinhood.d/%{purpose}/templates/hsm_policy_basic.conf
+%config %{_sysconfdir}/robinhood.d/%{purpose}/templates/hsm_policy_detailed.conf
 %else
 %if %{with backup}
-%config %{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates/backup_basic.conf
-%config %{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates/backup_detailed.conf
+%config %{_sysconfdir}/robinhood.d/%{purpose}/templates/backup_basic.conf
+%config %{_sysconfdir}/robinhood.d/%{purpose}/templates/backup_detailed.conf
 %else
 %if %{with shook}
-%config %{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates/shook_basic.conf
-%config %{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates/shook_detailed.conf
+%config %{_sysconfdir}/robinhood.d/%{purpose}/templates/shook_basic.conf
+%config %{_sysconfdir}/robinhood.d/%{purpose}/templates/shook_detailed.conf
 %else
-%config %{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates/tmp_fs_mgr_basic.conf
-%config %{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates/tmp_fs_mgr_detailed.conf
+%config %{_sysconfdir}/robinhood.d/%{purpose}/templates/tmp_fs_mgr_basic.conf
+%config %{_sysconfdir}/robinhood.d/%{purpose}/templates/tmp_fs_mgr_detailed.conf
 %endif
 %endif
 %endif
 
-%{_initrddir}/@PURPOSE_SVC@
+%{_initrddir}/%{purpose_svc}
 
 %changelog
 
