--- a/src/cfg_parsing/Makefile.am
+++ b/src/cfg_parsing/Makefile.am
@@ -1,5 +1,6 @@
 AM_YFLAGS		    = --defines
 AM_LFLAGS		    = -i
+# no -Werror because yacc's auto-generated code is not clean
 AM_CFLAGS= -Wall $(DB_CFLAGS) $(PURPOSE_CFLAGS) -DYY_NO_UNPUT
  
 if DEBUG_PARSING
