--- a/src/robinhood/Makefile.am
+++ b/src/robinhood/Makefile.am
@@ -1,5 +1,4 @@
-
-AM_CFLAGS= -Wall $(DB_CFLAGS) $(PURPOSE_CFLAGS)
+AM_CFLAGS= $(CC_OPT) $(DB_CFLAGS) $(PURPOSE_CFLAGS)
 AM_LDFLAGS= -lpthread
 
 #if LUSTRE
