Using fsname or devid or as FS identifier (config driven).

--- a/src/policy_modules/purge/Makefile.am
+++ b/src/policy_modules/purge/Makefile.am
@@ -1,4 +1,5 @@
-AM_CFLAGS= $(CC_OPT) $(DB_CFLAGS) $(PURPOSE_CFLAGS)
+# a lot of unused variables in this module... (remove -Werror)
+AM_CFLAGS= -Wall $(DB_CFLAGS) $(PURPOSE_CFLAGS)
 
 noinst_LTLIBRARIES=libresmonitor.la
 
