Fixes for new fs umount detection.

--- a/src/robinhood/Makefile.am
+++ b/src/robinhood/Makefile.am
@@ -59,7 +59,7 @@ robinhood_SOURCES=rbh_daemon.c
 robinhood_CFLAGS=$(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
 robinhood_LDFLAGS=$(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
 
-rbh_report_SOURCES=rbh_report.c
+rbh_report_SOURCES=rbh_report.c cmd_helpers.c
 rbh_report_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
 rbh_report_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
 
