incr release number (2.4.0-3 ro 2.4.0-4)

--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,7 @@
 AC_PREREQ(2.59)
 
 AC_INIT( [robinhood], [2.4.0], [robinhood-support@lists.sourceforge.net])
-RELEASE="3.shook13"
+RELEASE="4"
 AC_DEFINE_UNQUOTED(RELEASE, "$RELEASE", [release info] )
 AC_SUBST(RELEASE)
 
