--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -334,6 +334,18 @@ fi
 
 %changelog
 
+* Mon Jan 28 2013 Thomas Leibovici <thomas.leibovici@cea.fr> 2.4.1
+- [lustre] better file size change detection using CLOSE events
+  from MDT ChangeLog (requires Lustre 2.2 or +)
+- [scan] optimization: using fstatat and getdents
+- [rbh-find] added -atime/-amin options
+- [logs] add'l information in logs (DB operations, HSM_rm details)
+- [logs] log to stderr if opening of the log file fails
+- [fix] scan blocked if final DB operation failed
+- [fix] avoid DB lock exhaustion for huge requests
+- [backup] manage cross device rename in backend
+- [backup] rebind an entry in backend after fid change (e.g. restripe)
+
 * Wed Oct 31 2012 Thomas Leibovici <thomas.leibovici@cea.fr> 2.4.0
 - [feature] rbh-du and rbh-find: "du" and "find" clones querying robinhood's database
 - [report] new directory stats, top directories per dirent count, per avg file size
