EntryProcessor refactoring: 4 distinct attr sets: from db, from fs, needed from db and needed from fs.

--- a/src/entry_processor/Makefile.am
+++ b/src/entry_processor/Makefile.am
@@ -2,7 +2,7 @@ AM_CFLAGS= $(CC_OPT) $(DB_CFLAGS) $(PURPOSE_CFLAGS)
 
 noinst_LTLIBRARIES=libentryproc.la
 
-libentryproc_la_SOURCES=entry_proc_impl.c entry_proc_tools.c entry_proc_tools.h pipeline_common.c
+libentryproc_la_SOURCES=entry_proc_impl.c entry_proc_tools.c entry_proc_tools.h pipeline_steps.c
 
 indent:
 	$(top_srcdir)/scripts/indent.sh
