--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,13 @@ Makefile.in
 /autotools/compile
 /autotools/config.guess
 /autotools/config.sub
+/autotools/ar-lib
+/autotools/m4/libtool.m4
+/autotools/m4/ltoptions.m4
+/autotools/m4/ltsugar.m4
+/autotools/m4/ltversion.m4
+/autotools/m4/lt~obsolete.m4
+/autotools/ylwrap
 /autom4te.cache
 /config.status
 /libtool
@@ -49,4 +56,4 @@ Makefile.in
 /src/tests/Makefile
 /src/backend_ext/Makefile
 /tests/Makefile
-
+/web_gui/Makefile
