Save extra stripe info in DB: stripe ordering, object id on OSTs. Restrict stripe management code to Lustre only. Support for new include in Lustre 2.4.

--- a/configure.ac
+++ b/configure.ac
@@ -94,6 +94,11 @@ if test "x$support_lustre" = "xyes" ; then
 
         AC_DEFINE(_LUSTRE, 1, [liblustreapi is available])
 
+        AC_CHECK_HEADER([lustre/lustreapi.h], have_new_lustre_header="true", have_new_lustre_header="false")
+        if test "$have_new_lustre_header" = "true"; then
+            AC_DEFINE(_LUSTRE_API_HEADER, 1, [New lustreapi header])
+        fi
+
         # this defines LVERSION and LPACKAGE variables
         AX_LUSTRE_VERSION
 
