--- a/src/list_mgr/Makefile.am
+++ b/src/list_mgr/Makefile.am
@@ -14,9 +14,12 @@ if HSM_LITE
 DB_PURPOSE_SRC=listmgr_recov.c
 endif
 
+if LUSTRE
+LUSTRE_SRC=listmgr_stripe.c listmgr_stripe.h
+endif
+
 liblistmgr_la_SOURCES=	listmgr_init.c listmgr_common.c listmgr_common.h \
-			listmgr_get.c listmgr_insert.c \
-		    	listmgr_stripe.c listmgr_stripe.h \
+			listmgr_get.c listmgr_insert.c $(LUSTRE_SRC) \
 			listmgr_update.c listmgr_filters.c listmgr_remove.c listmgr_iterators.c \
 			listmgr_reports.c listmgr_config.c listmgr_internal.h database.h \
 			listmgr_vars.c listmgr_ns.c $(DB_WRAPPER_SRC) $(DB_PURPOSE_SRC)
