--- a/src/list_mgr/Makefile.am
+++ b/src/list_mgr/Makefile.am
@@ -21,7 +21,7 @@ endif
 liblistmgr_la_SOURCES=	listmgr_init.c listmgr_common.c listmgr_common.h \
 			listmgr_get.c listmgr_insert.c $(LUSTRE_SRC) \
 			listmgr_update.c listmgr_filters.c listmgr_remove.c listmgr_iterators.c \
-			listmgr_reports.c listmgr_config.c listmgr_internal.h database.h \
+			listmgr_tags.c listmgr_reports.c listmgr_config.c listmgr_internal.h database.h \
 			listmgr_vars.c listmgr_ns.c $(DB_WRAPPER_SRC) $(DB_PURPOSE_SRC)
 
 indent:
