incr version in configure.ac typos in nonreg tests mkfs.ext3 before each test session on test filesystem fix non-reg test: readlink modify symlinks atime, so they becomes eligible for purge.

--- a/tests/lustre_fs/cfg/PurgeStd_LastAccess.conf
+++ b/tests/lustre_fs/cfg/PurgeStd_LastAccess.conf
@@ -22,6 +22,8 @@ migration_policies
     {
         condition
         {
+            type == file
+            and
             last_access <= 10sec
         }
     }
