--- a/tests/posix_fs/cfg/PurgeStd_LastAccess.conf
+++ b/tests/posix_fs/cfg/PurgeStd_LastAccess.conf
@@ -22,6 +22,8 @@ migration_policies
     {
         condition
         {
+            type == file
+            and
             last_access <= 10sec
         }
     }
