Preliminary port to Lustre 2.4+HSM code

--- a/src/include/Makefile.am
+++ b/src/include/Makefile.am
@@ -15,12 +15,12 @@ noinst_HEADERS=db_types.h  list_mgr.h RW_Lock.h SemN.h \
 		policies.h rmdir.h queue.h StringAlloc.h hsm_rm.h migration.h
 
 if LUSTRE_HSM
-noinst_HEADERS+=pipeline_types.h lustre_hsm_types.def
+noinst_HEADERS+=lustre_hsm_types.h lustre_hsm_types.def pipeline_types.h
 lustre_hsm_types.h: lustre_hsm_types.def $(TYPEGEN)
 all: lustre_hsm_types.h
 endif
 if TMP_FS_MGR
-noinst_HEADERS+=tmp_fs_mgr_pipeline.h tmp_fs_mgr_types.def
+noinst_HEADERS+=tmp_fs_mgr_pipeline.h tmp_fs_mgr_types.def pipeline_types.h
 tmp_fs_mgr_types.h: tmp_fs_mgr_types.def $(TYPEGEN)
 all: tmp_fs_mgr_types.h
 endif
